# hexagonrpc

./: .editorconfig  README.md  meson.build
.github/workflows/: build.yaml
chrecd/: main.c  meson.build
chrecd/interface/: chre_slpi.c  chre_slpi.h
chrecd/interfaces/: chre_slpi.def
data/: hexagonrpcd-adsp-rootpd.service.in  hexagonrpcd-adsp-sensorspd.service.in  hexagonrpcd-sdsp.service.in  meson.build
hexagonrpcd/: apps_mem.c  apps_mem.h  apps_std.c  hexagonrpcd.1  interfaces.c  iobuffer.c  iobuffer.h  listener.c  listener.h  localctl.c  meson.build  rpcd.c  rpcd_builder.c
hexagonrpcd/interface/: adsp_default_listener.c  adsp_default_listener.h  adsp_listener.c  adsp_listener.h  apps_mem.c  apps_mem.h  apps_std.c  apps_std.h
hexagonrpcd/interfaces/: adsp_default_listener.def  adsp_listener.def  apps_mem.def  apps_std.def
include/libhexagonrpc/: error.h  fastrpc.h  handle.h  hexagonrpc.h  interface.h
include/libhexagonrpc/interface/: remotectl.h
include/libhexagonrpc/interfaces/: remotectl.def
libhexagonrpc/: context.c  error.c  fastrpc.c  handle.c  hexagonrpc.c  meson.build
libhexagonrpc/interface/: remotectl.c
tests/: meson.build  test_hexagonfs.c  test_hexagonrpc.c  test_iobuffer.c
tools/: meson.build  sscregistrygen.c
